# PolyEdger

./: .env.example  .gitignore  SPEC.md  docker-compose.yml  pyproject.toml
config/: config.yaml  evidence_sources.json  injection_patterns.json  model_pricing.json
migrations/: 001_initial_schema.sql  002_markets_table.sql  003_candidates_table.sql  004_calibration_tables.sql
src/polyedge/: __init__.py  ai_interface.py  arming.py  bot_state.py  budget.py  calibration.py  candidates.py  cli.py  config_signing.py  constants.py  db.py  decision.py  evidence.py  execution.py  filters.py  injection.py  locks.py  observability.py  reconcile.py  registry.py  risk.py  secrets.py  snapshots.py  startup.py  telegram.py  wal.py  watchlist.py  ws_client.py  ws_health.py
tests/: test_ai_swarm.py  test_bot_state.py  test_budget.py  test_calibration.py  test_candidates.py  test_config_signing.py  test_decision_risk_exec.py  test_evidence.py  test_filters.py  test_injection.py  test_phase_8_9.py  test_registry.py  test_secrets.py  test_snapshots.py  test_wal.py  test_watchlist.py  test_ws_health.py
