[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyedge"
version = "2.5.0"
description = "PolyEdge Automator — autonomous prediction-market edge research + execution"
requires-python = ">=3.8"
dependencies = [
    "asyncpg>=0.27",
    "websockets>=10.0",
    "aiohttp>=3.8",
    "click>=8.0",
    "pyyaml>=6.0",
    "orjson>=3.6",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
polyedge = "polyedge.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
